[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptcx"
version = "0.1.0"
description = "Concept-based explainability for Vision Transformers"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "timm",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
